# AutomatedUnitTesting

./: CMakeLists.txt  CMakeSettings.json  Readme.md
AutomatedUnitTesting/: CMakeLists.txt
AutomatedUnitTesting/include/: constraint_combiner.hpp  constraint_proxy.hpp  constraints.hpp  evaluation.hpp  helper.hpp  testgenerator.hpp
test/: CMakeLists.txt  test.cpp
